# pybind11_cmake

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ToDo.md  mkdocs.yml  prepare_project.sh  run_docker.sh  run_project.sh  supervisord.conf  test_script.sh
.github/workflows/: ci.yml
docs/: index.md  requirements.txt
example/c++/: main.cpp
example/py/: main.py  pointer.py
include/: base.hpp  child.hpp  header_list.hpp  pointer.hpp  reference.hpp  test.hpp
src/: base.cpp  child.cpp  pointer.cpp  reference.cpp  test.cpp
src/pybinded_file/: bind_pointer.cpp  bind_reference.cpp  bind_test.cpp  py_binded.cpp
